--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,3 @@
-/* COLORES (AZUL PROFUNDO, ROSA PASTEL, BLANCO)
-#00008B
-#65bcde80
-#87cfeb36
-#ffd2d2
- */
 * {
   padding: 0;
   margin: 0;
@@ -227,7 +221,7 @@
 }
 .grid-container-home .container-home .aside-home {
   grid-area: aside;
-  width: 8vw;
+  width: 10vw;
   position: fixed;
   top: 8vh;
 }
@@ -238,12 +232,16 @@
   list-style-type: none;
 }
 .grid-container-home .container-home .aside-home__ul .aside-home__li {
-  margin: 2vh 0;
-  padding: 3vh 0;
-  height: 5vh;
+  margin: 0.8rem 0.8vw;
+  padding: 2.1rem 0.3rem;
+  height: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+.grid-container-home .container-home .aside-home__ul .aside-home__li:hover {
+  background-color: rgba(255, 210, 210, 0.3490196078);
+  border-radius: 4px;
 }
 .grid-container-home .container-home .aside-home__ul .aside-home__li a {
   text-align: center;
@@ -274,6 +272,13 @@
   background-color: rgba(255, 210, 210, 0.5607843137);
   border-radius: 6px;
 }
+.grid-container-home .container-home .bar-home__btn:hover {
+  background-color: rgba(255, 210, 210, 0.6980392157);
+  cursor: pointer;
+}
+.grid-container-home .container-home .bar-home__btn .selected {
+  background-color: #4070F4;
+}
 .grid-container-home .container-home .bar-home__arrow--btn {
   height: 3vh;
   width: 4vw;
@@ -288,7 +293,7 @@
 }
 .grid-container-home .container-home .main-home {
   grid-area: main;
-  width: 90vw;
+  width: 88vw;
   position: relative;
   margin-left: 8vw;
   margin-top: 8vh;
@@ -521,6 +526,16 @@
 }
 
 /* HOW TO AFFECT A PARENT HOVERING A CHILD? */
+/* COLORES (AZUL PROFUNDO, ROSA PASTEL, BLANCO)
+#00008B
+#65bcde80
+#87cfeb36
+#ffd2d2
+ */
+.selected {
+  background-color: rgba(165, 53, 53, 0.6980392157);
+}
+
 @media only screen and (min-width: 768px) {
   .grid-container-inicio {
     background-image: url("/images/inicio.jpg");
