--- a/styles/views/_home.scss
+++ b/styles/views/_home.scss
@@ -82,7 +82,7 @@
 //ASIDE 
         .aside-home{
             grid-area: aside;
-            width: 8vw;
+            width: 10vw;
             position:fixed;
             top: 8vh;
             &__ul{
@@ -91,13 +91,16 @@
                 align-items: center;
                 list-style-type:none;
                 .aside-home__li{
-                    // background-color: gainsboro;
-                    margin: 2vh 0 ;
-                    padding: 3vh 0;
-                    height: 5vh;
+                    margin: 0.8rem 0.8vw ;
+                    padding: 2.1rem 0.3rem;
+                    height: 2rem;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
+                    &:hover{
+                        background-color: #ffd2d259;
+                        border-radius: 4px;
+                    }
                     a{
                         text-align: center;
                         lord-icon{
@@ -130,6 +133,13 @@
                 border: none;
                 background-color: #ffd2d28f;
                 border-radius: 6px;
+                &:hover{
+                    background-color: #ffd2d2b2;
+                    cursor: pointer;
+                }
+            .selected{
+                background-color: #4070F4;
+            }
             }
             &__arrow{
                 &--btn{
@@ -149,7 +159,7 @@
 // MAIN
         .main-home {
             grid-area: main;
-            width: 90vw;
+            width: 88vw;
             position: relative;
             margin-left: 8vw;
             margin-top: 8vh;
